# cscg_toolkit

./: .gitignore  Manifest.toml  Project.toml  README.md  README.md_  chmm_actions.jl  intro.jl
docs/: 2025-10-31-architecture.md  2025-10-31-conversion-summary.md  2025-10-31-remaining-issues.md  2025-11-01-test-results.md  claude.md  documentation-index.md  quick-start.md
docs/future/: flux-integration.md  gradient-descent.md  performance-benchmarks.md
jax/: README.md  pyproject.toml  requirements.txt
jax/chmm_jax/: __init__.py  core.py  message_passing.py  pytorch_bridge.py  utils.py
jax/examples/: basic_chmm.py  pytorch_hybrid.py
jax/tests/: __init__.py  test_core.py
julia/: Project.toml  README.md
julia/scripts/: helpers.jl  intro.jl  intro_simple.jl
julia/src/: ClonalMarkov.jl  helpers.jl  message_passing.jl  utils.jl
julia/test/: runtests.jl  test_equivalence.jl  test_visualization.jl
papers/summaries/: 00_neuroscience_connections.md  00_synthesis.md  17-06_Kansky_Schema_Networks_Zero-shot.md  18-12_Lazaro-Gredilla_Beyond_imitation_Zero-shot.md  19-05_Dedieu_Learning_higher-order_sequential.md  21-04_George_Clone-structured_graph_representations.md  22-12_Raju_Space_is_latent.md  README.md
scripts/: intro.jl  intro_simple.jl
src/: ClonalMarkov.jl  chmm.jl  helpers.jl  message_passing.jl  utils.jl
test/: runtests.jl
