# JAX CHMM Package Configuration
# Created: 2025-11-03

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chmm-jax"
version = "0.1.0"
description = "Clone-Structured Cognitive Graphs (CSCG) implemented in JAX with PyTorch bridge"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ryan Young" }]
keywords = [
    "hidden markov models",
    "chmm",
    "cscg",
    "cognitive graphs",
    "jax",
    "neuroscience",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "torch>=2.0.0",
    "optax>=0.1.7",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "matplotlib>=3.7.0"]

[project.urls]
Homepage = "https://github.com/synapticsage/cscg_toolkit"
Documentation = "https://github.com/synapticsage/cscg_toolkit/tree/main/jax"
Repository = "https://github.com/synapticsage/cscg_toolkit"

[tool.setuptools.packages.find]
where = ["."]
include = ["chmm_jax*"]
